# TV_project

./: .gitignore  README.MD  pyproject.toml
core/: settings.py
